@@ -1,3 +1,0 @@
-from PyScene.scene import *
-from PyScene.widgets import *
-from PyScene.tool import *
